# local-agent

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agent/: graph.py  model.py  state.py  tools.py
app/api/: chat.py
app/core/: config.py
app/memory/: store.py
app/rag/: loader.py  retriever.py
app/schemas/: chat.py  openai.py
app/session/: manager.py
app/tools/: __init__.py  calculator.py  datetime_tool.py  registry.py  weather.py  web_search.py
scripts/: run_agent.py
