[tool.poetry]
name = "local-agent"
version = "0.1.0"
description = ""
authors = ["Renee Lu <reneelu419@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.13"
langgraph = "^1.0.10"
langchain = "^1.2.10"
langchain-community = "^0.4.1"
ollama = "^0.6.1"
langchain-ollama = "^1.0.1"
fastapi = "^0.135.1"
uvicorn = "^0.41.0"
chromadb = "^1.5.5"

[tool.poetry.scripts]
agent = "scripts.run_agent:main"
api = "app.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
